[tool.poetry]
name = "planet_overlap"
version = "0.1.0"
description = "Automated PlanetScope imagery processing for multiple AOIs and date ranges"
authors = ["Hankui Zhang <email@example.com>"]
packages = [{include = "planet_overlap"}]

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^1.2"
shapely = "^2.0"
numpy = "^1.24"
requests = "^2.31"
pandas = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pytest-cov = "^4.1"

[tool.poetry.scripts]
planet-client = "planet_overlap.client:run_client"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=planet_overlap --cov-report=term-missing"
testpaths = ["tests"]
